--- a/html/basket.html
+++ b/html/basket.html
@@ -18,17 +18,17 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-">
       <div class="container-fluid">
-        <a class="navbar-brand" href="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\index.html"><img src="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\image\logo.png" class="w-25 rounded-3" alt="logo"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../image/logo.png" class="w-25 rounded-3" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\index.html">Каталог</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Каталог</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\html/basket.html">Корзина</a>
+                <a class="nav-link" href="../html/basket.html">Корзина</a>
             </li>
             </ul>
           <form class="d-flex">
@@ -58,7 +58,7 @@
     <div class="tabb22">
       <div class="tablica_individ_5 rodutel_dla_knopku">
       <div class="d-flex flex-row flex-wrap justify-content-around">
-          <img src="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\image/karman/карман_1.png" class="w-75 border" alt="рисунок животного">
+          <img src="../image/karman/карман_1.png" class="w-75 border" alt="рисунок животного">
       </div>
    
           <div class="Soderj_yheicu rodutel_dla_knopku">
@@ -84,7 +84,7 @@
   <div class="tabb22">
     <div class="tablica_individ_5 rodutel_dla_knopku">
     <div class="d-flex flex-row flex-wrap justify-content-around ">
-        <img src="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\image/karman/карман_2.png" class="w-75 border" alt="рисунок штанов">
+        <img src="../image/karman/карман_2.png" class="w-75 border" alt="рисунок штанов">
     </div>
  
     <div class="Soderj_yheicu rodutel_dla_knopku">
@@ -110,7 +110,7 @@
           <div class="tabb22">
               <div class="tablica_individ_5 rodutel_dla_knopku">
               <div class="d-flex flex-row flex-wrap justify-content-around">
-                  <img src="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\image/karman/карман_3.png" class="w-75 border" alt="рисунок животного">
+                  <img src="../image/karman/карман_3.png" class="w-75 border" alt="рисунок животного">
               </div>
            
               <div class="Soderj_yheicu rodutel_dla_knopku">
@@ -136,7 +136,7 @@
           <div class="tabb22">
               <div class="tablica_individ_5 rodutel_dla_knopku">
               <div class="d-flex flex-row flex-wrap justify-content-around ">
-                  <img src="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\image/karman/карман_4.png" class="w-75 border" alt="рисунок животного">
+                  <img src="../image/karman/карман_4.png" class="w-75 border" alt="рисунок животного">
               </div>
            
               <div class="Soderj_yheicu rodutel_dla_knopku">
