--- a/html/basket.html
+++ b/html/basket.html
@@ -7,8 +7,8 @@
 
   <!-- Bootstrap CSS -->
   <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
-  <link href="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\css/bootstrap.min.css" rel="stylesheet">
-  <link href="C:\Users\Егор Королев\OneDrive\Рабочий стол\Учебная практика 3 курс\Sait_Upcretee-master\index.css" rel="stylesheet">
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../index.css" rel="stylesheet">
   
 
 
