--- a/html/basket.html
+++ b/html/basket.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" aria-current="page" href="../index.html">Каталог</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../html/basket.html">Корзина</a>
+                <a class="nav-link" href="../basket.html">Корзина</a>
             </li>
             </ul>
           <form class="d-flex">
@@ -58,7 +58,7 @@
     <div class="tabb22">
       <div class="tablica_individ_5 rodutel_dla_knopku">
       <div class="d-flex flex-row flex-wrap justify-content-around">
-          <img src="../image/karman/карман_1.png" class="w-75 border" alt="рисунок животного">
+          <img src="../image/karman/карман_1.png" class="w-75 border" alt="рисунок">
       </div>
    
           <div class="Soderj_yheicu rodutel_dla_knopku">
@@ -84,7 +84,7 @@
   <div class="tabb22">
     <div class="tablica_individ_5 rodutel_dla_knopku">
     <div class="d-flex flex-row flex-wrap justify-content-around ">
-        <img src="../image/karman/карман_2.png" class="w-75 border" alt="рисунок штанов">
+        <img src="../image/karman/карман_2.png" class="w-75 border" alt="рисунок">
     </div>
  
     <div class="Soderj_yheicu rodutel_dla_knopku">
@@ -110,7 +110,7 @@
           <div class="tabb22">
               <div class="tablica_individ_5 rodutel_dla_knopku">
               <div class="d-flex flex-row flex-wrap justify-content-around">
-                  <img src="../image/karman/карман_3.png" class="w-75 border" alt="рисунок животного">
+                  <img src="../image/karman/карман_3.png" class="w-75 border" alt="рисунок">
               </div>
            
               <div class="Soderj_yheicu rodutel_dla_knopku">
@@ -136,7 +136,7 @@
           <div class="tabb22">
               <div class="tablica_individ_5 rodutel_dla_knopku">
               <div class="d-flex flex-row flex-wrap justify-content-around ">
-                  <img src="../image/karman/карман_4.png" class="w-75 border" alt="рисунок животного">
+                  <img src="../image/karman/карман_4.png" class="w-75 border" alt="рисунок">
               </div>
            
               <div class="Soderj_yheicu rodutel_dla_knopku">
